<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.loganmallory</groupId>
    <artifactId>checker-framework-fenum-demo</artifactId>
    <version>0.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>fenum demo</name>
    <description>An example of how to use the org.checkerframework's Fenum subtyping</description>
    <url>https://github.com/loganmallory/checker-framework-fenum-demo</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/loganmallory/decimal-java.git</connection>
        <developerConnection>scm:git:ssh://github.com/loganmallory/checker-framework-fenum-demo.git</developerConnection>
        <url>https://github.com/loganmallory/checker-framework-fenum-demo</url>
    </scm>

    <properties>
        <java.version>20</java.version>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker</artifactId>
            <version>3.45.0</version>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
            <version>3.45.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <executions>
                    <!-- Compile just the annotations -->
                    <execution>
                        <id>compile-annotations</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                            <includes>
                                <include>org/example/annotations/**/*.java</include>
                            </includes>
                        </configuration>
                    </execution>

                    <!-- Compile everything else; annotation classes should automatically be in the classpath -->
                    <execution>
                        <id>compile-main</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>${maven.compiler.source}</source>
                            <target>${maven.compiler.target}</target>
                            <fork>true</fork>
                            <excludes>
                                <exclude>org/example/annotations/**/*.java</exclude>
                            </excludes>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.checkerframework</groupId>
                                    <artifactId>checker</artifactId>
                                    <version>3.45.0</version>
                                </path>
                            </annotationProcessorPaths>
                            <annotationProcessors>
                                <annotationProcessor>org.checkerframework.checker.fenum.FenumChecker</annotationProcessor>
                            </annotationProcessors>
                            <compilerArgs>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                                <arg>-Aquals=org.example.annotations.MyFenum</arg>
                                <!-- -AqualDirs also doesn't work: -->
                                <!--                                <arg>-AqualDirs=/Users/loganmallory/code/fenum-demo/target/classes/org/example/annotations</arg>-->
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>